# unofficial_mapy_com_mcp

./: .dockerignore  Dockerfile  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
src/unofficial_mapy_com_mcp/: async_mapy_client.py  server.py
src/unofficial_mapy_com_mcp/models/: requests.py  settings.py
src/unofficial_mapy_com_mcp/models/mapy/common/: types.py
src/unofficial_mapy_com_mcp/models/mapy/geocode/: requests.py  response.py  types.py
src/unofficial_mapy_com_mcp/models/mapy/route/: request.py  response.py  types.py
tests/: conftest.py  test_geocode.py  test_routing.py
tests/cassettes/test_geocode/: test_geocode.yaml  test_reverse_geocode.yaml
tests/cassettes/test_routing/: test_routing.yaml  test_routing_different_continent.yaml  test_routing_not_reachable.yaml  test_unknown_error_codes.yaml
tests/evals/: eval_pydantic_ai.py
